src/objects/AccountDistributor__c.object
<CustomObject>
    <description>Account Distributors from Aperity.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Distributors</relationshipLabel>
        <relationshipName>AccountDistributors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistributorName__c</fullName>
        <formula>Distributor__r.Name</formula>
        <label>Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributorProgramPartner__c</fullName>
        <formula>Distributor__r.ProgramPartner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Program Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Accounts</relationshipLabel>
        <relationshipName>Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id_Aperity__c</fullName>
        <label>External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesRepID__c</fullName>
        <label>Sales Rep ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepName__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepTeamID__c</fullName>
        <label>Sales Rep Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceID__c</fullName>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamID__c</fullName>
        <label>Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>TEXT(Account__r.Territory__c)</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedByID__c</fullName>
        <label>Updated By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WarehouseID__c</fullName>
        <externalId>true</externalId>
        <label>Warehouse ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Distributor</label>
    <nameField>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>